Work on Polish Focuses + Flavor

--- a/localisation/KR_Countries_Cosmetic_l_english.yml
+++ b/localisation/KR_Countries_Cosmetic_l_english.yml
@@ -104,9 +104,9 @@ POL_REPUBLIC_market_liberal_DEF:0 "The Polish Republic"
 POL_REPUBLIC_national_populist:0 "Poland"
 POL_REPUBLIC_national_populist_ADJ:0 "Polish"
 POL_REPUBLIC_national_populist_DEF:0 "Poland"
-POL_REPUBLIC_paternal_autocrat:0 "Kingdom of Poland"
+POL_REPUBLIC_paternal_autocrat:0 "Polish State"
 POL_REPUBLIC_paternal_autocrat_ADJ:0 "Polish"
-POL_REPUBLIC_paternal_autocrat_DEF:0 "The Kingdom of Poland"
+POL_REPUBLIC_paternal_autocrat_DEF:0 "The Polish State"
 POL_REPUBLIC_radical_socialist:0 "Polish Socialist Republic"
 POL_REPUBLIC_radical_socialist_ADJ:0 "Socialist-Polish"
 POL_REPUBLIC_radical_socialist_DEF:0 "Polish Socialist Republic"
