--- a/localisation/KR_Poland_l_english.yml
+++ b/localisation/KR_Poland_l_english.yml
@@ -58,6 +58,14 @@ POL_lessons_of_the_empire_idea:0 "Lessons of the Empire"
 POL_lessons_of_the_empire_idea_desc:0 "Taking from Austria's experience managing many minorities, we have taken steps to integrate our own minority peoples."
 POL_citizens_rights_idea:0 "Citizen's Rights"
 POL_citizens_rights_idea_desc:0 "By empowering our citizens, we allow more to try more enlightening pursuits, such as joining the army."
+POL_monarchist_sympathies_idea:0 "Monarchist Sympathies"
+POL_monarchist_sympathies_idea_desc:0 "Sympathies for the old kingdom still pervade the government, and could become a threat if left unchecked for long..."
+POL_russian_research_idea:0 "Russian Armour Designers"
+POL_russian_research_idea_desc:0 "Importing Russian armour designs and consulting with their designers will increase our own ability to produce Panzers by leaps and bounds."
+POL_entente_research_idea:0 "Entente Fighter Research"
+POL_entente_research_idea_desc:0 "The entente holds a distinct edge in Fighter designs. By consulting their designers we will be able to improve our own fighter planes greatly."
+POL_suffrage_idea:0 "Women's Suffrage"
+POL_suffrage_idea_desc:0 "The Polish Republic allows all of her citizen's equal right to vote, and reaps the rewards from doing so."
 
 ### Foci ###
 POL_the_great_debate:0 "The Great Debate"
@@ -274,8 +282,8 @@ POL_line_of_succession_desc:0 "Poland's 20 years of weakness were caused by the 
 POL_join_international_community_desc:0 "As a new nation, it is our responsibility to re-enter the world stage as a strong and independent nation, and forge new ties where they were lost after the fall of the Kingdom."
 POL_steelworks:0 "Scheibler and Grohman Works"
 POL_steelworks_desc:0 "Giving the Scheibler and Grohman Works authority over the Lodz region will allow them to increase their steel production drastically, and further fuel the fires of Polish industry."
-POL_entente_technology:0 "The Imperial Scientific Council"
-POL_entente_technology_desc:0 "Our ties with the entente must be further strengthened by tying together our technological advancements to further advance the military prowess of all nations in the alliance."
+POL_entente_technology:0 "Entente Fighter Designs"
+POL_entente_technology_desc:0 "Our ties with the Entente must be further strengthened by tying together our technological advancements. Doing so will certainly advance the military prowess of all nations in the alliance."
 
 POL_mendog_iii:0 "A Lithuanian King!"
 POL_mendog_iii_desc:0 "With the election of Mendog III, the new king must secure his position as the new monarch of a struggling nation."
@@ -305,6 +313,18 @@ POL_sieze_galicia:0 "Seize Galicia"
 POL_sieze_galicia_desc:0 "Galicia is a rightful part of Poland, and we must press our claims to the region! Galicia will be returned to rightful Polish control!"
 POL_radek_policy:0 "Radek's New Policy"
 POL_radek_policy_desc:0 "With a new government comes new economic policy. All nations who do not follow the rightful Syndicalist banner cannot strip Poland of her rightful resources!"
+POL_russian_technology:0 "Russian Armour Designs"
+POL_russian_technology_desc:0 "With our newfound alliance with Russia, it would be of great benefit to Poland if we were to work with the Russians on new and improved Panzer designs for our own forces."
+POL_war_games:0 "Hold Joint Exercises"
+POL_war_games_desc:0 "Even with war looming on the horizon, it is important to give our troops the most experience we can give them. With our close ties to Germany, there is a possibility of holding join exercises with the German military, something that is sure to benefit our troops and commanders greatly."
+POL_rebuild_krakow:0 "Rebuilding Krakow"
+POL_rebuild_krakow_desc:0 "Now that Krakow has been returned to us, it would benefit us greatly to reincorporate the existing infrastrucutre into our own. The city has seen lackluster support under the Austrian thumb, and under our care the historic city will flourish anew."
+POL_suffrage:0 "Decree Women's Suffrage"
+POL_suffrage_desc:0 "With the coming of a new Republic should come the rebirth of the Polish people. No motion would be more symbolic than giving all Poles, man or woman, the right to vote."
+POL_experiment_with_radar:0 "Experiment with RADAR"
+POL_experiment_with_radar_desc:0 "RADAR is a new technology in the field of warfare, and one we have no experience with. If we can harness this technology, our airforce will be more competitive in the skies."
+POL_empower_gminy:0 "Empower the Gminy"
+POL_empower_gminy_desc:0 "We must hand back the power to the people, and allow themselves to be in charge of their own defenses. We shall allow every Gminy to maintain and control their own small local militia forces, so that they may better defend their own lands and interests."
 
 ### Opinion Modifiers ###
 POL_NATIONALISTS_GOV:0 "Nationalist government in Poland"
@@ -377,7 +397,7 @@ POL_BD_ON_WHR_OTHERS:0 "Poland Back Down on White Ruthenia"
 poland.1.t:0 "The Economy Fails!"
 poland.1.d:0 "Germany is in a heavy economic crises, and our dependence on them economically means that our own economy will be crippled. Our farmers are making no money from the large decrease in prices of agricultural products and factories are preparing to fire thousands of workers. It seems that this summer will be hard for the Polish people, both in the cities and in countryside. We need to take countermeasures before the unrest begins."
 poland.1.a:0 "Send additional police to the countryside!"
-poland.1.b:0 "Liberalise, introduce more democracy in Poland"
+poland.1.b:0 "The Kingdom has failed! Long live the Republic!"
 poland.2.t:0 "Bombing in Warsaw"
 poland.2.d:0 "Yesterday, over fifty people were killed and approximately 200 people were injured in a deadly bombing in Warsaw. The police doesn't yet know anything about who did it, but it is widely assumed that the Polish Underground Anarchist Party is responsible for the attack on the 'bourgeois'."
 poland.2.a:0 "A horrendous day!"
@@ -1116,6 +1136,34 @@ poland.193.a:0 "A great loss for the nation."
 poland.194.t:0 "Marriage to the Sea"
 poland.194.d:0 "Ever since the dissolution of our country in 1793, the Polish nation has lost our access the sea. But now, after almost 150 years of separation, we have returned to our long-lost love. To celebrate this grand reunion, many ceremonies are being held along the coasts under our control, where the Polish nation is symbolically reunited with the sea. Many of these ceremonies are marked with 21 gun salutes, Catholic services, and much general celebration."
 poland.194.a:0 "We will never leave you again!"
+poland.195.t:0 "Monarchist Sympathies"
+poland.195.d:0 "With the Regency Council ousted from power and the new government slowly cementing its control over all state affairs, there are those who still seek the restoration of a monarch to rule Poland. They talk in hushed tones and move in secret, but they hold onto power all the same. If they are not dealt with, they may eventually find an opportunity to wreak havoc in the nation."
+poland.195.a:0 "Very troubling."
+poland.196.t:0 "Sikorski's Poland"
+poland.196.d:0 "With the unruly monarchist factions now destroyed for the time being, and the military's control over the country all but absolute, many in the High Command are wondering if the Marshal should do away with the farce of the 'Kingdom of Poland' once and for all."
+poland.196.a:0 "The Kingdom is merely a fiction."
+poland.196.b:0 "We cannot violate the sanctity of the Kingdom."
+poland.197.t:0 "The Monarchist Faction"
+poland.197.d:0 "Troubled by the increasing control the Marshal is having over state affairs in Poland, a large group of Szlatcha and State Officials who continue to support the monarchy have come forward with an offer. If we guarantee their roles in [POL.GetLeader]'s government and take an oath that the monarchy will be restoed in due time, they will give their full support to the current government of Poland. It is a promising offer, but how much can we really trust these men?"
+poland.197.a:0 "We will make the deal."
+poland.197.b:0 "They have no real power, begone!"
+poland.198.t:0 "Poland Falls to Syndicalists"
+poland.198.d:0 "to-do"
+poland.198.a:0 "Welcome our new brothers!"
+poland.198.b:0 "Another nation falls to the plague."
+poland.198.c:0 "Glory to us!"
+poland.199.t:0 "Poland Falls to Nationalists"
+poland.199.d:0 "to-do"
+poland.199.a:0 "A worrisome development."
+poland.199.b:0 "To our new future!"
+poland.200.t:0 "Poland Declares the Republic"
+poland.200.d:0 "to-do"
+poland.200.a:0 "Interesting."
+poland.200.b:0 "Long live the Republic!"
+poland.201.t:0 "The Polish Military Siezes Control"
+poland.201.d:0 "to-do"
+poland.201.a:0 "Interesting."
+poland.201.b:0 "It is for the best."
 
 ### Global Flags ###
 POL_REPUBLIC:0 "Declared the Polish Republic"
@@ -1126,6 +1174,7 @@ POL_WE:0 "Fryderyk Krystian Saski is King"
 POL_HA:0 "Karl Olbracht Habsburg is King"
 POL_MEN:0 "Mendog III is King"
 POL_CZA:0 "Augustyn I Czartoryski is King"
+POL_MON_COMPROMISE:0 "Compromised with the Monarchists"
 POL_SEJM_ABOLISHED:0 "Abolished the Sejm"
 POL_central_forts:0 "gains moderate defensive infrastructure."
 POL_RAD:0 "Karol Radek leads Poland"
@@ -1135,6 +1184,7 @@ UKR_Syndicalist:0 "Ukraine is Syndicalist"
 UKR_Alone:0 "Ukraine is alone"
 pol_nationalists_overthrow_monarchy:0 "§RThe Nationalists seize control!§! \n"
 pol_syndicalists_overthrow_monarchy:0 "§RThe Syndicalists seize control!§! \n"
+POL_gminy_tooltip:0 "You will gain 5 Militia Divisions. \n"
 
 ### Research ###
 german_research_name:0 "Kaiser Wilhelm Society"
