+Focus for POL joining SOV faction.

--- a/localisation/KR_Poland_l_english.yml
+++ b/localisation/KR_Poland_l_english.yml
@@ -325,6 +325,8 @@ POL_experiment_with_radar:0 "Experiment with RADAR"
 POL_experiment_with_radar_desc:0 "RADAR is a new technology in the field of warfare, and one we have no experience with. If we can harness this technology, our airforce will be more competitive in the skies."
 POL_empower_gminy:0 "Empower the Gminy"
 POL_empower_gminy_desc:0 "We must hand back the power to the people, and allow themselves to be in charge of their own defenses. We shall allow every Gminy to maintain and control their own small local militia forces, so that they may better defend their own lands and interests."
+POL_fourth_international:0 "Joining The Fourth International"
+POL_fourth_international_desc:0 "A powerful Syndicalist state, the Soviet Untion has denounced the ways of the French Commune and the Third Internationale. They instead have created a "Fourth International" and are calling all true Syndicalist states to join in their cause. We should take them up on their offer."
 
 ### Opinion Modifiers ###
 POL_NATIONALISTS_GOV:0 "Nationalist government in Poland"
@@ -1164,6 +1166,16 @@ poland.201.t:0 "The Polish Military Siezes Control"
 poland.201.d:0 "to-do"
 poland.201.a:0 "Interesting."
 poland.201.b:0 "It is for the best."
+poland.202.t:0 "Poland Joins the Fourth International?"
+poland.202.d:0 "After their recent Syndicalist revolution, the small nation of Poland is seeking to join the ranks of true Syndicalism worldwide, the Fourth International. Should we allow them into our ranks?"
+poland.202.a:0 "Our brothers!"
+poland.202.b:0 "Their belief in our cause is flimsy."
+poland.203.t:0 "The International Grows!"
+poland.203.d:0 "The Soviet Union has accepted our entry to the Fourth International! We stand firm with our brothers in Syndicalism!"
+poland.203.a:0 "The wheels of revolution turn!"
+poland.204.t:0 "The Soviet Union Dismisses Polish Interest"
+poland.204.d:0 "Seemingly distrusting the new Syndicalist regime in Poland, the Soviet Union has denied our entry into the Fourth International, stating that our belief in their ideals is too weak. Without the help of the Fourth International, our future in Europe looks bleak."
+poland.204.a:0 "Impossible!"
 
 ### Global Flags ###
 POL_REPUBLIC:0 "Declared the Polish Republic"
