New state for the Russian part of Latvia

--- a/localisation/KR_State_Names_l_english.yml
+++ b/localisation/KR_State_Names_l_english.yml
@@ -209,7 +209,7 @@ STATE_206:0 "Minsk"
 STATE_207:0 "Orsha"
 STATE_208:0 "Luga"
 STATE_209:0 "Pskov"
-STATE_210:0 "Dvinsk"
+STATE_210:0 "Vitebsk"
 STATE_211:0 "Burgas"
 STATE_212:0 "Plovdiv"
 STATE_213:0 "Murmansk"
@@ -879,3 +879,4 @@ STATE_876:0 "Dahomé"
 STATE_877:0 "Togoland"
 STATE_878:0 "Hausaland"
 STATE_879:0 "Katanga"
+STATE_880:0 "Dvinsk"
