More work on the American Factions

--- a/localisation/KR_USA_l_english.yml
+++ b/localisation/KR_USA_l_english.yml
@@ -355,6 +355,8 @@ USA_reclaiming_hawaii:0 "Reclaim Hawaii"
 USA_reclaiming_hawaii_desc:0 ""
 
 ### Ideas ###
+USA_political_crisis:0 "Political Crisis"
+USA_political_crisis_desc:0 "The United States is in crisis. The Great Depression which has been going on for over a decade now still has not let up. This has allowed the Far Left Combined Syndicates of America and the Far Right America First Party to gain strength in recent years as alternatives to solve the crisis. Others look to the MacArthur and the Army as a way to solve the radicalization and crisis. Everyone is afraid of a coming civil war should things not let up and be resolved or one of the more radical choices win in the upcoming 1936 Elections. "
 USA_pass_the_ammo:0 "Pass the Ammunition"
 USA_joint_chiefs_of_staff:0 "Joint Chiefs of Staff"
 USA_contingencies_planning:0 "Rapid Officer Planning"
